Dinner session. Fixed buttons and font/size/color. Work on 3images, spacing, and mobile.

--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,12 @@ img {
   width: 100%;
 }
 
-img[src*="3"] {
-  height: 200px;
-}
-
 h1, h2, h3, h5 {
   font-family: "Open Sans", Helvetica;
+}
+
+.fa {
+  font-size: 50px;
 }
 
 .bg-image {
@@ -31,18 +31,34 @@ h1, h2, h3, h5 {
   width: 100vw;
 }
 
+img[src*="3"] {
+  height: 200px;
+}
+
 .bg-image-1 { /* ADDING ALT? */
   background-image: url(images/3unleash.jpg);
+}
+
+.bg-image-1:hover {
+  transform: scale(1.1); /* 110% ZOOM */
+  /* border: 5px solid transparent; */
 }
 
 .bg-image-2 { /* ADDING ALT? */
   background-image: url(images/3synergize.jpg);
 }
 
+.bg-image-2:hover {
+  transform: scale(1.1); /* 110% ZOOM */
+}
+
 .bg-image-3 { /* ADDING ALT? */
   background-image: url(images/3procrastinate.jpg);
 }
 
+.bg-image-3:hover {
+  transform: scale(1.1); /* 110% ZOOM */
+}
 
 .btn-primary {
   background-color: #9ACD32 !important;
@@ -50,21 +66,28 @@ h1, h2, h3, h5 {
 }
 
 .btn-lg.round { /* NEED btn.lg? */
-	border-radius: 24px;
+	border-radius: 30px;
 }
 
 .btn-primary.outline {
-  border: 2px solid #9ACD32;
+  border: 5px solid #9ACD32 !important;
   color: white;
 }
 
-.btn-primary:hover, .btn-primary:focus, .btn-primary:active, .btn-primary.active, .open>.dropdown-toggle.btn-primary {
+.btn-primary:hover {
   background-color: forestgreen !important;
   border-color: forestgreen !important;
+  border: 5px solid forestgreen !important;
+  color: white !important;
 }
 
 .btn-primary:focus, .btn-primary.focus {
-  box-shadow: 0 0 0 3px forestgreen !important;
+  box-shadow: none !important;
+}
+
+.btn-primary:active, .btn-primary.active {
+  background-color: #337ab7 !important;
+  border: 5px solid #2e6da4 !important;
 }
 
 /* https://stackoverflow.com/questions/46697652/changing-color-of-bootstrap-button BUTTON PROPERTIES */
